test/Fail/Issue2120.err
error: [UnsolvedConstraints]
Failed to solve the following constraints:
  Nat =< _B_19 zero (blocked on _B_19)

Issue2120.agda:16.10-54: error: [UnsolvedMetaVariables]
Unsolved metas at the following locations:
  Issue2120.agda:16.10-36
  Issue2120.agda:16.49-50
  Issue2120.agda:16.50-54
